--- a/Loma_Real.html
+++ b/Loma_Real.html
@@ -19,9 +19,9 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-    <script src="Capas/lotes.js"></script>
-    <script src="Capas/area.js"></script>
-    <script src="Capas/puntos.js"></script>
+    <script src="lotes.js"></script>
+    <script src="area.js"></script>
+    <script src="puntos.js"></script>
     <script src="Loma_Real.js"></script>
 </body>
 </html>
